# tradebook-bridge

./: .gitignore  README.md  akshare_server.py  generate_map.py  hybrid_server.py  main.py  pyproject.toml  requirements.txt  yfinance_server.py
data/: cn_stock_names.json
